[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowplan"
version = "0.1.0"
description = "Dataset manager for multi-source ingest, compile, compare, and export"
readme = "README.md"
authors = [{name="Rey Flores", email="reyhector1234@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "jsonschema>=4.25.1"
]

[project.optional-dependencies]
access = ["pyodbc"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
flowplan = "src.flowplan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]